src/test/ui/type-alias-enum-variants/enum-variant-priority-higher-than-other-inherent.stderr
error[E0061]: this enum variant takes 1 argument but 0 arguments were supplied
  --> $DIR/enum-variant-priority-higher-than-other-inherent.rs:21:5
   |
LL |     <E>::V();
   |     ^^^^^^-- an argument of type `u8` is missing
   |
note: tuple variant defined here
  --> $DIR/enum-variant-priority-higher-than-other-inherent.rs:5:5
   |
LL |     V(u8)
   |     ^
help: provide the argument
   |
LL |     <E>::V(/* u8 */);
   |           ~~~~~~~~~~

error[E0308]: mismatched types
  --> $DIR/enum-variant-priority-higher-than-other-inherent.rs:22:17
   |
LL |     let _: u8 = <E2>::V;
   |            --   ^^^^^^^ expected `u8`, found enum `E2`
   |            |
   |            expected due to this

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
